--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
         "camelcase": "^8.0.0",
         "camelcase-keys": "^9.1.2",
         "dotenv": "^16.3.1",
-        "selenium-webdriver": "^4.16.0"
+        "puppeteer": "^21.7.0"
     }
 }
